--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "flowpipe-hcl",
   "displayName": "flowpipe-hcl",
   "description": "Flowpipe HCL Language Support",
-  "publisher": "Johannes Van Zijl",
+  "publisher": "vscode-ext-vanzijl-us",
+  "repository": "https://github.com/ysterbal/flowpipe-hcl.git",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.107.0"
