updated the package.json file to support building and deploying directly from within the project. Remove node_modules from the vsix package to remove unnecessary files.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "categories": [
     "Programming Languages"
   ],
+  "scripts": {
+    "package": "vsce package",
+    "build": "mkdir -p build && vsce package --out build/"
+  },
   "contributes": {
     "languages": [
       {
@@ -32,5 +36,8 @@
         "path": "./syntaxes/flowpipe.tmLanguage.json"
       }
     ]
+  },
+  "dependencies": {
+    "vsce": "^2.15.0"
   }
 }
