--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,4 +1,14 @@
 .vscode/**
 .vscode-test/**
 .gitignore
+out/test/**
+out/**/*.map
+src/**
+.gitignore
+tsconfig.json
 vsc-extension-quickstart.md
+tslint.json
+**/tsconfig.json
+**/.eslintrc.json
+node_modules/**
+tests/**
